# agentic-expense-tracker

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  chainlit.md  main.py  pyproject.toml  run_whatsapp.py
.github/workflows/: deploy.yml
docs/: setup_whatsapp.md
src/: data_fetching_flow.py  data_inserting_flow.py  database_query_tool.py  read_image.py  settings.py
src/adapters/database/: postgres_adapter.py  sqlite_adapter.py
src/adapters/embedding/: __init__.py  gemini_embedding_adapter.py
src/adapters/llm/: gemini_adapter.py  groq_adapter.py
src/adapters/memory/: __init__.py  memory_manager.py  qdrant_long_term_memory.py  supabase_short_term_memory.py
src/adapters/stt/: gemini_stt_adapter.py
src/adapters/tts/: elevenlabs_adapter.py
src/adapters/vision/: groq_vision_adapter.py
src/agents/: database_analyst_agent.py  main_agent.py
src/config/: containers.py
src/domain/: models.py
src/interfaces/chainlit/: app.py
src/interfaces/whatsapp/: whatsapp_app.py  whatsapp_handler.py
src/observability/: langfuse.py
src/ports/: database_port.py  embedding_port.py  llm_port.py  memory_port.py  stt_port.py  tts_port.py  vision_port.py
src/tools/: read_image.py  save_data_to_db.py  speech_to_text.py
src/utils/: clients.py  logging_config.py
