[project]
name = "financial-assistance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.28.0",
    "ipykernel>=6.30.1",
    "openai>=1.99.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.0.0",
    "chainlit>=2.6.9",
    "numpy>=2.3.2",
]
